--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
   <!-- NAVIGATION -->
   <nav class="navbar">
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html#lettere">Altre Lettere</a></li>
-      <li><a href="index.html#capitoli">I Capitoli</a></li>
-      <li><a href="index.html#contatti">Contatti</a></li>
+      <li><a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill/">Home</a></li>
+      <li><a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill-9.L-L-amore-come-unica-eredita/">Altre Lettere</a></li>
+      <li><a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill-1.Prefazione/">I Capitoli</a></li>
+      <li><a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill/">Contatti</a></li>
     </ul>
   </nav>
 
@@ -357,9 +357,9 @@
     </div>
 
     <div class="navigazione-lettere">
-      <a href="lettera-6.html" class="btn">← Lettera Precedente</a>
-      <a href="index.html" class="btn">Torna alla Home</a>
-      <a href="lettera-8.html" class="btn">Lettera Successiva →</a>
+      <a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill-6.L-Lo-zero-accanto-all-uno/" class="btn">← Lettera Precedente</a>
+      <a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill/" class="btn">Torna alla Home</a>
+      <a href="https://antonello2907.github.io/Le-Lettere-di-Antonino-di-Pradd-Mill-8.L-La-seconda-chiamata-il-ritorno-a-casa/" class="btn">Lettera Successiva →</a>
     </div>
   </main>
 
@@ -372,3 +372,4 @@
 
 </body>
 </html>
+
